Closed Bug 1670089 Opened 4 years ago Closed 4 years ago

Fix reading of responses without a body

Categories

(Core :: Networking: HTTP, defect, P2)

defect

Tracking

()

RESOLVED FIXED
83 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox81 --- unaffected
firefox82 --- unaffected
firefox83 --- fixed

People

(Reporter: dragana, Assigned: dragana)

References

(Regression)

Details

(Keywords: regression, Whiteboard: [necko-triaged])

Attachments

(1 file)

No description provided.

The problem occurs when a response does not have a body. In this case the transaction will never be closed. if a transaction only has read headers, WriteSegments will return 0 bytes written(bug 1646701) and WriteSegments will not be called again and the transaction will not pickup the FIN bit.

Some code improvements:

  • calling WriteSegments in a loop has been moved to Http3Stream. This is more appropriate place
  • remove RECEIVED_RESET, because it is not used
  • add test and add head_http3.js for setting up http3 tests (e.g. making sure that an alt-svc mapping is setup)
  • fix handling of a response that has more data than its content-length header indicates.

Set release status flags based on info from the regressing bug 1669680

Pushed by ddamjanovic@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/0e1dbaae5a4d Fix transactions WriteSegments issue with http3. r=necko-reviewers,valentin
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 83 Branch
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: