Bug 1670089 - Fix transactions WriteSegments issue with http3. r=necko-reviewers,valentin

The problem occurs when a response does not have a body. In this case the transaction will never be closed.  if a transaction only has read headers, WriteSegments will return 0 bytes written(bug 1646701) and WriteSegments will not be called again and the transaction will not pickup the FIN bit.

Some code improvements:
- calling WriteSegments in a loop has been moved to Http3Stream. This is more appropriate place
- remove RECEIVED_RESET, because it is not used
- add test and add head_http3.js for setting up http3 tests (e.g. making sure that an alt-svc mapping is setup)
- fix handling of a response that has more data than its content-length header indicates.

Differential Revision: https://phabricator.services.mozilla.com/D92990